# cft_app

./: .env  Dockerfile  README.md  config_postgres.sql  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
cft_app/: asgi.py  base_models.py  settings.py  urls.py  wsgi.py
contract/: admin.py  models.py
contract/management/commands/: fill_contract_table.py
contract/migrations/: 0001_initial.py  0002_alter_contract_number.py  0003_alter_contract_number.py
credit_application/: admin.py  apps.py  credit_service.py  models.py
credit_application/management/commands/: fill_credit_application_table.py
credit_application/migrations/: 0001_initial.py  0002_alter_creditapplication_number.py  0003_alter_creditapplication_number.py
producer/: admin.py  models.py
producer/management/commands/: fill_producer_table.py
producer/migrations/: 0001_initial.py
product/: admin.py  models.py
product/management/commands/: fill_product_table.py
product/migrations/: 0001_initial.py
